--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
+
+body {
+  background: rgb(48,27,0);
+background: linear-gradient(0deg, rgba(48,27,0,1) 1%, rgba(0,236,154,1) 30%, rgba(255,255,255,1) 100%) !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: rgb(138, 83, 0);
+ 
+  
 }
 
-.App-link {
-  color: #61dafb;
+.title {
+
+  font-family: 'Raleway';
+  font-size: 60px;
+  color:bisque;
+
+}
+.card {
+  background-color: rgb(101, 148, 130) !important;
+  transition: transform .3s ease-in-out;
+  color: bisque;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.card:hover {
+  transform: scale(1.05);
+}
+
+.navbar {
+  background-color: rgb(207, 124, 0);
+}
+
+footer {
+
+  display: flex;
+  justify-content: center;
+  background-color: #301b00;
+  color: bisque;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
